--- a/devapp-client-master-1.4/package.json
+++ b/devapp-client-master-1.4/package.json
@@ -27,6 +27,9 @@
     "fabric-client": "~1.4.0",
     "font-awesome": "~4.7.0",
     "grpc": "1.10.1",
+    "log4js": "^5.3.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "nodemon": "^1.19.4",
     "passport": "~0.3.2",
     "passport-http": "~0.3.0",
